# readwise-anki-gpt

./: .gitignore  README.md  addon.json  pyproject.toml  requirements.txt
docs/: Controlling which highlights and documents are used to generate Anki cards.md  Entity-Relationship Diagram for Addon Data.md  How Anki cards are generated.md
docs/.obsidian/: community-plugins.json  workspace.json
docs/.obsidian/plugins/mermaid-themes/: data.json
docs/.obsidian/plugins/obsidian-excalidraw-plugin/: data.json
src/readwise-anki-gpt/: __init__.py  config.py  controller.py  database.py  model.py  openai.py  readwise.py  user_data_template.json
src/readwise-anki-gpt/designer/: import_readwise_highlights_progress_bar.ui  import_readwise_highlights_progress_bar_ui.py  readwise_anki_gpt.ui  readwise_anki_gpt_ui.py
src/readwise-anki-gpt/gui/: msg_box.py
